# MiniballCuda

./: CMakeLists.txt  MiniballCuda.hpp  dummy.cpp  example.cu  readme.md  timing_test.cu
